<resources>
    <string name="app_name">录音</string>
    <string name="setting">设置</string>

    <string-array name="arr">
        <item>录音</item>
        <item>列表</item>
    </string-array>

    <!-- Toolbar -->
    <string name="action_licenses">Licenses</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My_Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Preferences -->
    <string name="pref_high_quality_key">pref_high_quality</string>
    <string name="pref_high_quality_title">Enable High Quality Recording</string>
    <string name="pref_high_quality_desc">Record in CD Quality</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc">v%s</string>

    <string name="message_permission" translatable="false">
        "用户选择了不在提示按钮,\n获取相关权限失败,\n将导致部分功能无法正常使用，\n需要到设置页面手动授权"
    </string>
    <string name="go_permission">
        去授权
    </string>
</resources>
